QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- On Setup/Settings/Parameters dialog, all device selection options
  are now reset to default when disabled interactively.

- Grayed/disabled palette color group fix for dark color themes.

- Qt Software logo update.

- Fait-divers: desktop menu file touched to openSUSE conventions.

- ALSA PCM devices now only listed/enumerated iif strictly compliant
  with the audio mode criteria (Duplex, Capture-only or Playback-only)
  as kindly suggested by Nedko Ardaunov.

- JACK client/port aliases may now be displayed as a global user option
  (see Setup/Display/Connections/JACK client/port aliases).

- Lighten up the connections line and highlight colors, as seen to fit
  best on some darker background themes.

- Patchbay snapshot fixed to differentiate socket clients according
  to its type (Audio, MIDI or ALSA-Seq), avoiding the mess and gross
  mistake of hanging disparate type ports under the same client item.

- JACK_DEFAULT_SERVER environment variable is now appended to the X11
  unique application identifier, allowing for having multiple instances
  each controlling its own JACK server, besides the default one.

- Due to some trouble with newer Qt >= 4.4 applications regarding font
  size configuration, a new global user option is now available to the
  rescue: Setup/Misc/Defaults/Base font size (default is no-op).


0.3.3  2008-06-07  Patchbay JACK-MIDI, file logging and X11 uniqueness.

- Attempt to load Qt's own translation support and get rid of
  the ever warning startup message, unless built in debug mode.
  (transaction by Guido Scholz, while on qsynth-devel, thanks).

- Messages file logging makes its first long overdue appearance,
  with user configurable settings in Setup/Options/Logging.

- Only one application instance is now allowed to be up and running,
  with immediate but graceful termination upon startup iif an already