@@ -463,140 +463,6 @@ QPixmap *qjackctlSocketList::createPixmapMerge (
 }
 
 
-// JACK specific client:port connections snapshot.
-void qjackctlSocketList::clientJackSnapshot ( int iSocketType )
-{
-	// Grab JACK client:ports...
-	if (m_pJackClient == NULL)
-		return;
-
-	const char *pszJackPortType = JACK_DEFAULT_AUDIO_TYPE;
-#ifdef CONFIG_JACK_MIDI
-	if (iSocketType == QJACKCTL_SOCKETTYPE_JACK_MIDI)
-		pszJackPortType = JACK_DEFAULT_MIDI_TYPE;
-#endif
-
-	const char **ppszClientPorts = jack_get_ports(m_pJackClient,
-		NULL, pszJackPortType,
-		(m_bReadable ? JackPortIsOutput : JackPortIsInput));
-	if (ppszClientPorts) {
-		int iClientPort = 0;
-		while (ppszClientPorts[iClientPort]) {
-			QString sClientPort = ppszClientPorts[iClientPort];
-			qjackctlSocketItem *pSocket = NULL;
-			qjackctlPlugItem   *pPlug   = NULL;
-			int iColon = sClientPort.indexOf(':');
-			if (iColon >= 0) {
-				QString sClientName = sClientPort.left(iColon);
-				QString sPortName = qjackctlClientAlias::escapeRegExpDigits(
-					sClientPort.right(sClientPort.length() - iColon - 1));
-				pSocket = findSocket(sClientName, iSocketType);
-				if (pSocket)
-					pPlug = pSocket->findPlug(sPortName);
-				if (pSocket == NULL) {
-					int iSocketCount = listView()->topLevelItemCount();
-					if (iSocketCount > 0) {
-						pSocket = static_cast<qjackctlSocketItem *> (
-							listView()->topLevelItem(iSocketCount - 1));
-					}
-					pSocket = new qjackctlSocketItem(this, sClientName,
-						qjackctlClientAlias::escapeRegExpDigits(sClientName),
-						iSocketType, pSocket);
-				}
-				if (pSocket && pPlug == NULL) {
-					int iPlugCount = pSocket->childCount();
-					if (iPlugCount > 0) {
-						pPlug = static_cast<qjackctlPlugItem *> (
-							pSocket->child(iPlugCount - 1));
-					}
-					pPlug = new qjackctlPlugItem(pSocket, sPortName, pPlug);
-				}
-			}
-			iClientPort++;
-		}
-		::free(ppszClientPorts);
-	}
-}
-
-// ALSA specific client:port connections snapshot.
-void qjackctlSocketList::clientAlsaSnapshot ( int iSocketType )
-{
-	if (m_pAlsaSeq == NULL)
-		return;
-
-#ifdef CONFIG_ALSA_SEQ
-
-	// Grab ALSA subscribers...
-	snd_seq_client_info_t *pClientInfo;
-	snd_seq_port_info_t   *pPortInfo;
-	unsigned int uiAlsaFlags;
-	if (m_bReadable)
-		uiAlsaFlags = SND_SEQ_PORT_CAP_READ  | SND_SEQ_PORT_CAP_SUBS_READ;
-	else
-		uiAlsaFlags = SND_SEQ_PORT_CAP_WRITE | SND_SEQ_PORT_CAP_SUBS_WRITE;
-
-	snd_seq_client_info_alloca(&pClientInfo);
-	snd_seq_port_info_alloca(&pPortInfo);
-	snd_seq_client_info_set_client(pClientInfo, -1);
-	while (snd_seq_query_next_client(m_pAlsaSeq, pClientInfo) >= 0) {
-		int iAlsaClient = snd_seq_client_info_get_client(pClientInfo);
-		if (iAlsaClient > 0) {
-			QString sClientName = snd_seq_client_info_get_name(pClientInfo);
-			snd_seq_port_info_set_client(pPortInfo, iAlsaClient);
-			snd_seq_port_info_set_port(pPortInfo, -1);
-			while (snd_seq_query_next_port(m_pAlsaSeq, pPortInfo) >= 0) {
-				unsigned int uiPortCapability
-					= snd_seq_port_info_get_capability(pPortInfo);
-				if (((uiPortCapability & uiAlsaFlags) == uiAlsaFlags) &&
-					((uiPortCapability & SND_SEQ_PORT_CAP_NO_EXPORT) == 0)) {
-					QString sPortName = qjackctlClientAlias::escapeRegExpDigits(
-						snd_seq_port_info_get_name(pPortInfo));
-					qjackctlSocketItem *pSocket = NULL;
-					qjackctlPlugItem   *pPlug   = NULL;
-					pSocket = findSocket(sClientName, iSocketType);
-					if (pSocket)
-						pPlug = pSocket->findPlug(sPortName);
-					if (pSocket == NULL) {
-						int iSocketCount = listView()->topLevelItemCount();
-						if (iSocketCount > 0) {
-							pSocket = static_cast<qjackctlSocketItem *> (
-								listView()->topLevelItem(iSocketCount - 1));
-						}
-						pSocket = new qjackctlSocketItem(this, sClientName,
-							qjackctlClientAlias::escapeRegExpDigits(sClientName),
-							iSocketType, pSocket);
-					}
-					if (pSocket && pPlug == NULL) {
-						int iPlugCount = pSocket->childCount();
-						if (iPlugCount > 0) {
-							pPlug = static_cast<qjackctlPlugItem *> (
-								pSocket->child(iPlugCount - 1));
-						}
-						pPlug = new qjackctlPlugItem(pSocket, sPortName, pPlug);
-					}
-				}
-			}
-		}
-	}
-
-#endif	// CONFIG_ALSA_SEQ
-}
-
-
-// General client:port connections snapshot.
-void qjackctlSocketList::clientPortsSnapshot (void)
-{
-	clientJackSnapshot(QJACKCTL_SOCKETTYPE_JACK_AUDIO);
-
-#ifdef CONFIG_JACK_MIDI
-	clientJackSnapshot(QJACKCTL_SOCKETTYPE_JACK_MIDI);
-#endif
-#ifdef CONFIG_ALSA_SEQ
-	clientAlsaSnapshot(QJACKCTL_SOCKETTYPE_ALSA_MIDI);
-#endif
-}
-
-
 // Return currently selected socket item.
 qjackctlSocketItem *qjackctlSocketList::selectedSocketItem (void) const
 {
@@ -2091,146 +1957,13 @@ snd_seq_t *qjackctlPatchbay::alsaSeq (void) const
 }
 
 
-// Audio connections snapshot.
-void qjackctlPatchbay::socketPlugJackSnapshot (
-	qjackctlSocketItem *pOSocket, qjackctlPlugItem *pOPlug )
-{
-	// Audio and MIDI engine descriptors...
-	jack_client_t *pJackClient = jackClient();
-
-	// Get current JACK port connections...
-	QString sOClientPort = pOSocket->socketName() + ':' + pOPlug->plugName();
-	const char **ppszIClientPorts = jack_port_get_all_connections(pJackClient,
-		jack_port_by_name(pJackClient, sOClientPort.toUtf8().constData()));
-	if (ppszIClientPorts) {
-		// Now, for each input client port...
-		int iIClientPort = 0;
-		while (ppszIClientPorts[iIClientPort]) {
-			QString sIClientPort = ppszIClientPorts[iIClientPort];
-			int iColon = sIClientPort.indexOf(':');
-			if (iColon >= 0) {
-				qjackctlSocketItem *pISocket
-					= m_pISocketList->findSocket(
-						sIClientPort.left(iColon), pOSocket->socketType());
-				if (pISocket)
-					connectSockets(pOSocket, pISocket);
-			}
-			iIClientPort++;
-		}
-		::free(ppszIClientPorts);
-	}
-}
-
-
-// MIDI connections snapshot.
-void qjackctlPatchbay::socketPlugAlsaSnapshot (
-	qjackctlSocketItem *pOSocket, qjackctlPlugItem *pOPlug )
-{
-#ifdef CONFIG_ALSA_SEQ
-
-	// ALSA sequencer descriptors...
-	snd_seq_t *pAlsaSeq = alsaSeq();
-
-	// ALSA subscriber structures.
-	snd_seq_query_subscribe_t *pAlsaSubs;
-	snd_seq_addr_t seq_addr;
-	snd_seq_query_subscribe_alloca(&pAlsaSubs);
-
-	// ALSA readable (output) client ports...
-	snd_seq_client_info_t *pOClientInfo;
-	snd_seq_port_info_t   *pOPortInfo;
-	unsigned int uiOFlags = SND_SEQ_PORT_CAP_READ | SND_SEQ_PORT_CAP_SUBS_READ;
-
-	snd_seq_client_info_alloca(&pOClientInfo);
-	snd_seq_port_info_alloca(&pOPortInfo);
-
-	// ALSA sequencer writable (input) client ports...
-	snd_seq_client_info_t *pIClientInfo;
-	snd_seq_client_info_alloca(&pIClientInfo);
-
-	// Get current MIDI port connections...
-	snd_seq_client_info_set_client(pOClientInfo, -1);
-	while (snd_seq_query_next_client(pAlsaSeq, pOClientInfo) >= 0) {
-		int iOClient = snd_seq_client_info_get_client(pOClientInfo);
-		if (iOClient > 0) {
-			QString sOClientName = snd_seq_client_info_get_name(pOClientInfo);
-			if (sOClientName == pOSocket->clientName()) {
-				snd_seq_port_info_set_client(pOPortInfo, iOClient);
-				snd_seq_port_info_set_port(pOPortInfo, -1);
-				while (snd_seq_query_next_port(pAlsaSeq, pOPortInfo) >= 0) {
-					unsigned int uiOCapability
-						= snd_seq_port_info_get_capability(pOPortInfo);
-					if (((uiOCapability & uiOFlags) == uiOFlags) &&
-						((uiOCapability & SND_SEQ_PORT_CAP_NO_EXPORT) == 0)) {
-						QString sOPortName
-							= snd_seq_port_info_get_name(pOPortInfo);
-						if (sOPortName == pOPlug->plugName()) {
-							int iOPort = snd_seq_port_info_get_port(pOPortInfo);
-							// Now, look for subscribers of his port...
-							snd_seq_query_subscribe_set_type(pAlsaSubs,
-								SND_SEQ_QUERY_SUBS_READ);
-							snd_seq_query_subscribe_set_index(pAlsaSubs, 0);
-							seq_addr.client = iOClient;
-							seq_addr.port   = iOPort;
-							snd_seq_query_subscribe_set_root(pAlsaSubs, &seq_addr);
-							while (snd_seq_query_port_subscribers(pAlsaSeq, pAlsaSubs) >= 0) {
-								seq_addr = *snd_seq_query_subscribe_get_addr(pAlsaSubs);
-								if (snd_seq_get_any_client_info(pAlsaSeq,
-										seq_addr.client, pIClientInfo) == 0) {
-									QString sIClientName
-										= snd_seq_client_info_get_name(pIClientInfo);
-									qjackctlSocketItem *pISocket
-										= m_pISocketList->findSocket(
-											sIClientName, pOSocket->socketType());
-									if (pISocket)
-										connectSockets(pOSocket, pISocket);
-								}
-								snd_seq_query_subscribe_set_index(pAlsaSubs,
-									snd_seq_query_subscribe_get_index(pAlsaSubs) + 1);
-							}
-						}
-					}
-				}
-			}
-		}
-	}
-
-#endif	// CONFIG_ALSA_SEQ
-}
-
-
 // Connections snapshot.
 void qjackctlPatchbay::connectionsSnapshot (void)
 {
-	// Take snapshot of client port list.
-	m_pOSocketList->clientPortsSnapshot();
-	m_pISocketList->clientPortsSnapshot();
-
-	// Then, starting from output sockets, try to grab the connections...
-	QListIterator<qjackctlSocketItem *> osocket(m_pOSocketList->sockets());
-	while (osocket.hasNext()) {
-		qjackctlSocketItem *pOSocket = osocket.next();
-		// For each output plug item...
-		QListIterator<qjackctlPlugItem *> oplug(pOSocket->plugs());
-		while (oplug.hasNext()) {
-			qjackctlPlugItem *pOPlug = oplug.next();
-			// Check for socket type...
-			switch (pOSocket->socketType()) {
-			case QJACKCTL_SOCKETTYPE_JACK_AUDIO:
-			case QJACKCTL_SOCKETTYPE_JACK_MIDI:
-				// Get current JACK port connections...
-				socketPlugJackSnapshot(pOSocket, pOPlug);
-				break;
-			case QJACKCTL_SOCKETTYPE_ALSA_MIDI:
-				// Get current MIDI port connections...
-				socketPlugAlsaSnapshot(pOSocket, pOPlug);
-				break;
-			}
-		}
-	}
-
-	// Surely it is kind of tainted.
-	m_pPatchbayView->setDirty(true);
+	qjackctlPatchbayRack rack;
+	rack.connectJackSnapshot(jackClient());
+	rack.connectAlsaSnapshot(alsaSeq());
+	loadRack(&rack);
 }
 
 
