@@ -1,7 +1,7 @@
 // qjackctlPatchbayForm.cpp
 //
 /****************************************************************************
-   Copyright (C) 2003-2007, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2003-2008, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -664,7 +664,7 @@ void qjackctlPatchbayForm::addISocket (void)
 
 
 void qjackctlPatchbayForm::removeISocket (void)
-{    
+{
 	(m_pPatchbay->ISocketList())->removeSocketItem();
 }
 
